# crypto-trading-bot

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
sql/: 001_create_tables.sql  002_create_indexes.sql  003_create_functions.sql
src/analysis_agent/: __init__.py  analyzer.py  main.py  openai_client.py
src/data_collector/: binance_client.py  coingecko.py  fear_greed.py  main.py
src/shared/: __init__.py  config.py  db.py  indicators.py  logger.py  models.py
src/telegram_bot/: __init__.py  handlers.py  keyboards.py  main.py
src/trader/: __init__.py  binance_trader.py  executor.py  main.py  position_manager.py
supabase/.temp/: pooler-url  project-ref
tests/: conftest.py  test_indicators.py
